--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,4 +2,42 @@ body {
   font-family: "montserrat", sans-serif;
 }
 
+.hero {
+  background-image: url("../images/family.jpg");
+  height: 100%;
+  background-position: center;
+  text-align: center;
+}
+.hero .hero__title {
+  font-size: 40px;
+  color: #FFFFFF;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+.hero .hero__subtitle {
+  font-size: 20px;
+  color: #FFFFFF;
+  line-height: 30px;
+  font-weight: lighter;
+  margin-bottom: 20px;
+}
+.hero .hero__box {
+  padding: 30px;
+}
+
+.button {
+  background-color: #23A6F0;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 10px 36px;
+  border-radius: 20px;
+}
+.button .button__box {
+  display: flex;
+  flex-direction: column;
+}
+.button .button--inverted {
+  background-color: transparent;
+}
+
 /*# sourceMappingURL=styles.css.map */
