--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,36 +8,50 @@ body {
   background-position: center;
   text-align: center;
 }
-.hero .hero__title {
+.hero__title {
   font-size: 40px;
   color: #FFFFFF;
   font-weight: bold;
   margin-bottom: 40px;
 }
-.hero .hero__subtitle {
+.hero__subtitle {
   font-size: 20px;
   color: #FFFFFF;
   line-height: 30px;
   font-weight: lighter;
   margin-bottom: 20px;
 }
-.hero .hero__box {
+.hero__box {
   padding: 30px;
+}
+.hero__button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 .button {
   background-color: #23A6F0;
   color: #FFFFFF;
   text-decoration: none;
-  padding: 10px 36px;
+  padding: 10px 30px;
   border-radius: 20px;
 }
-.button .button__box {
-  display: flex;
-  flex-direction: column;
+.button:hover {
+  background-color: #4eb2ec;
 }
-.button .button--inverted {
+.button--inverted {
   background-color: transparent;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 10px 36px;
+  border: 1px solid #FFFFFF;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+.button--inverted:hover {
+  background-color: #adaaaa;
 }
 
 /*# sourceMappingURL=styles.css.map */
