--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,21 +4,28 @@
   background-position: center;
   text-align: center;
 
-  .hero__title {
+  &__title {
     font-size: 40px;
-    color: #FFFFFF;
+    color: $white;
     font-weight: bold;
     margin-bottom: 40px;
   }
 
-  .hero__subtitle {
+  &__subtitle {
     font-size: 20px;
-    color: #FFFFFF;
+    color: $white;
     line-height: 30px;
     font-weight: lighter;
     margin-bottom: 20px;
   }
-  .hero__box {
+  &__box {
     padding: 30px;
   }
-}
+
+  &__button {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  }
