--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
 $primary: #23A6F0;
-$secondary: #252B42;
+$secondary:#4eb2ec;
+$tertiary: #252B42;
 $white: #FFFFFF;
+$gray :#adaaaa;
 
 $mobile-width: 768px;
 $desktop-width: 1100px;
