--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,10 @@
 $primary: #23A6F0;
 $secondary:#4eb2ec;
 $tertiary: #252B42;
+$quinary: #737373;
 $white: #FFFFFF;
-$gray :#adaaaa;
+$sixth :#adaaaa;
+
 
 $mobile-width: 768px;
 $desktop-width: 1100px;
