add new mobile version testimonials section

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,11 @@ $primary: #23A6F0;
 $secondary:#4eb2ec;
 $tertiary: #252B42;
 $quinary: #737373;
-$white: #FFFFFF;
 $sixth :#adaaaa;
+$seven :#FAFAFA;
+$eighth: #DEDEDE;
+$white: #FFFFFF;
 
 
-$mobile-width: 768px;
+$tablet-width: 768px;
 $desktop-width: 1050px;
