--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,4 +187,21 @@ body {
   margin-bottom: 20px;
 }
 
+@media (min-width: 1050px) {
+  .depositions__main {
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .depositions__card {
+    padding: 30px 70px;
+  }
+}
+@media (min-width: 800px) {
+  .depositions__main {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
