--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -40,3 +40,10 @@
       gap: 0;
     }
   }
+
+  @include tablet {
+    .content__main {
+      display: flex;
+      flex-direction: row;
+    }
+  }
