add media queries tablet version in hero section

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -95,3 +95,15 @@
     }
   }
 }
+
+@include tablet {
+    .hero__button {
+      justify-content: center;
+      flex-direction: row;
+    }
+
+    .hero__card__main {
+      flex-direction: row;
+      align-items: stretch;
+    }
+  }
