--- a/scss/_partners.scss
+++ b/scss/_partners.scss
@@ -20,9 +20,10 @@
   &__text {
     color: $white;
     font-size: 24px;
-    line-height: bold;
+    font-weight: bolder;
     text-align: center;
     padding: 10px 40;
+    margin-bottom: 20px;
   }
 
   &__box {
@@ -34,12 +35,15 @@
     border: 0;
     padding: 20px;
     border-radius: 10px;
-    border-radius: 10px 0 0 10px;
+    border-radius: 5px 0 0 5px;
   }
 
   &__button {
+    background-color: $primary;
+    color: $white;
     border: 0;
     padding: 20px;
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
   }
 }
