--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #23A6F0;
 $secondary:#4eb2ec;
-$tertiary: #252B42;
+$terciary: #252B42;
 $quinary: #737373;
 $sixth :#adaaaa;
 $seven :#FAFAFA;
