--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -9,6 +9,15 @@
     background-color: $secondary;
   }
 
+  &--modifier {
+    background-color: $primary;
+    color: $white;
+    text-decoration: none;
+    padding: 15px 80px;
+    border-radius: 5px;
+    margin-top: 30px;
+  }
+
   &--inverted {
     background-color: transparent;
     color: $white;
