--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -19,7 +19,7 @@
   }
 
   &__title {
-    color: $tertiary;
+    color: $terciary;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
