--- a/scss/_depositions.scss
+++ b/scss/_depositions.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   &__title {
-    color: $tertiary;
+    color: $terciary;
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 30px;
