--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,7 +327,6 @@ body {
 .packages__subtitle {
   color: #737373;
   font-size: 16px;
-  font-weight: bolder;
   margin-bottom: 30px;
   line-height: 20px;
   letter-spacing: 0.2px;
@@ -390,6 +389,8 @@ body {
 .packages__card__value {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 .packages__card__cifrao {
   color: #23A6F0;
@@ -411,6 +412,9 @@ body {
 }
 
 @media (min-width: 1050px) {
+  .packages__subtitle {
+    padding: 20px 100px;
+  }
   .packages__box {
     padding: 112px 212px 80px 212px;
   }
@@ -425,7 +429,7 @@ body {
   .packages__card__box--inverted {
     border-radius: 10px;
     padding: 70px 40px;
-    transform: scale(1.1);
+    margin-top: -60px;
   }
 }
 
