--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("../images/family.jpg") no-repeat center center;
+  background: url("../images/main.jpg") no-repeat center center;
   background-size: cover;
   text-align: center;
 
