--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .hero {
-  background: url("../images/family.jpg") no-repeat center center;
+  background: url("../images/main.jpg") no-repeat center center;
   background-size: cover;
   text-align: center;
 }
@@ -431,6 +431,27 @@ body {
     padding: 70px 40px;
     margin-top: -60px;
   }
+}
+.world {
+  background-color: #252B42;
+  padding: 80px 50px;
+}
+.world__title {
+  color: #FFFFFF;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  line-height: 60px;
+}
+.world__subtitle {
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 90px;
+}
+.world__image {
+  width: 90%;
+  margin-bottom: 50px;
 }
 
 /*# sourceMappingURL=styles.css.map */
