--- a/scss/_register.scss
+++ b/scss/_register.scss
@@ -1,10 +1,10 @@
 .register {
   background-color: $white;
+  border-bottom: 10px solid $terciary;
 
   &__main {
     padding: 40px 50px;
   }
-
 
   &__image {
     width: 100%;
@@ -15,6 +15,7 @@
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 40px;
+    line-height: 60px;
   }
 
   &__form {
@@ -40,5 +41,8 @@
       border-radius: 5px;
       margin-bottom: 12px;
     }
+  }
+  &__button {
+    margin-top: 30px;
   }
 }
