--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -3,29 +3,21 @@
   color: $white;
   text-decoration: none;
   padding: 10px 30px;
-  border-radius: 20px;
+  border-radius: 5px;
+  display: inline-flex;
+  justify-content: center;
+
+  &--full {
+    width: 100%;
+  }
 
   &:hover {
     background-color: $secondary;
   }
 
-  &--modifier {
-    background-color: $primary;
-    color: $white;
-    text-decoration: none;
-    padding: 15px 80px;
-    border-radius: 5px;
-    margin-top: 30px;
-  }
-
   &--inverted {
     background-color: transparent;
-    color: $white;
-    text-decoration: none;
-    padding: 10px 36px;
-    border: 1px solid #FFFFFF;
-    border-radius: 20px;
-    box-sizing: border-box;
+    border: 1px solid $white;
 
     &:hover {
       background-color: $sixth;
