add footer section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -527,5 +527,66 @@ body {
     justify-content: center;
   }
 }
+.footer {
+  background-color: #FFFFFF;
+}
+.footer__main {
+  background-color: #FAFAFA;
+  padding: 40px;
+}
+.footer__title {
+  font-size: 24px;
+  color: #252B42;
+  font-weight: bold;
+  margin-bottom: 20px;
+  line-height: 30px;
+}
+.footer__subtitle {
+  font-size: 14px;
+  color: #737373;
+  font-weight: lighter;
+  margin-bottom: 50px;
+}
+.footer__list {
+  padding: 50px 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer__list__title {
+  color: #252B42;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.footer__list__subtitle {
+  margin-bottom: 10px;
+}
+.footer__list__link {
+  text-decoration: none;
+  color: #737373;
+  font-size: 14px;
+}
+.footer__contact {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.footer__contact__text {
+  color: #737373;
+  font-size: 14px;
+}
+.footer__social {
+  display: flex;
+  gap: 20px;
+}
+.footer__social__title {
+  color: #737373;
+  font-size: 16px;
+  font-weight: lighter;
+  margin-bottom: 20px;
+  line-height: 24px;
+}
 
 /*# sourceMappingURL=styles.css.map */
