--- a/styles/styles.css
+++ b/styles/styles.css
@@ -580,6 +580,7 @@ body {
 .footer__social {
   display: flex;
   gap: 20px;
+  height: 24px;
 }
 .footer__social__title {
   color: #737373;
@@ -587,6 +588,20 @@ body {
   font-weight: lighter;
   margin-bottom: 20px;
   line-height: 24px;
+}
+
+@media (min-width: 768px) {
+  .footer__main {
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+  }
+  .footer__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 60px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
