--- a/styles/styles.css
+++ b/styles/styles.css
@@ -532,7 +532,10 @@ body {
 }
 .footer__main {
   background-color: #FAFAFA;
-  padding: 40px;
+  padding: 50px 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 .footer__title {
   font-size: 24px;
@@ -586,13 +589,13 @@ body {
   color: #737373;
   font-size: 16px;
   font-weight: lighter;
-  margin-bottom: 20px;
   line-height: 24px;
 }
 
 @media (min-width: 768px) {
   .footer__main {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     gap: 70px;
   }
